walkterm-ssd1306/build/log/idf_py_stdout_output_9547
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/walkterm-ssd1306.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/walkterm-ssd1306.c.obj 
/home/networkjarwy/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/build/config -I/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main -I/home/networkjarwy/esp/esp-idf/components/newlib/platform_include -I/home/networkjarwy/esp/esp-idf/components/freertos/config/include -I/home/networkjarwy/esp/esp-idf/components/freertos/config/include/freertos -I/home/networkjarwy/esp/esp-idf/components/freertos/config/xtensa/include -I/home/networkjarwy/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/networkjarwy/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/networkjarwy/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/networkjarwy/esp/esp-idf/components/freertos/esp_additions/include -I/home/networkjarwy/esp/esp-idf/components/esp_hw_support/include -I/home/networkjarwy/esp/esp-idf/components/esp_hw_support/include/soc -I/home/networkjarwy/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/networkjarwy/esp/esp-idf/components/esp_hw_support/dma/include -I/home/networkjarwy/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/networkjarwy/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/networkjarwy/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/networkjarwy/esp/esp-idf/components/heap/include -I/home/networkjarwy/esp/esp-idf/components/log/include -I/home/networkjarwy/esp/esp-idf/components/soc/include -I/home/networkjarwy/esp/esp-idf/components/soc/esp32 -I/home/networkjarwy/esp/esp-idf/components/soc/esp32/include -I/home/networkjarwy/esp/esp-idf/components/hal/platform_port/include -I/home/networkjarwy/esp/esp-idf/components/hal/esp32/include -I/home/networkjarwy/esp/esp-idf/components/hal/include -I/home/networkjarwy/esp/esp-idf/components/esp_rom/include -I/home/networkjarwy/esp/esp-idf/components/esp_rom/include/esp32 -I/home/networkjarwy/esp/esp-idf/components/esp_rom/esp32 -I/home/networkjarwy/esp/esp-idf/components/esp_common/include -I/home/networkjarwy/esp/esp-idf/components/esp_system/include -I/home/networkjarwy/esp/esp-idf/components/esp_system/port/soc -I/home/networkjarwy/esp/esp-idf/components/esp_system/port/include/private -I/home/networkjarwy/esp/esp-idf/components/xtensa/esp32/include -I/home/networkjarwy/esp/esp-idf/components/xtensa/include -I/home/networkjarwy/esp/esp-idf/components/xtensa/deprecated_include -I/home/networkjarwy/esp/esp-idf/components/lwip/include -I/home/networkjarwy/esp/esp-idf/components/lwip/include/apps -I/home/networkjarwy/esp/esp-idf/components/lwip/include/apps/sntp -I/home/networkjarwy/esp/esp-idf/components/lwip/lwip/src/include -I/home/networkjarwy/esp/esp-idf/components/lwip/port/include -I/home/networkjarwy/esp/esp-idf/components/lwip/port/freertos/include -I/home/networkjarwy/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/networkjarwy/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/networkjarwy/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/components/ssd1306 -I/home/networkjarwy/esp/esp-idf/components/driver/deprecated -I/home/networkjarwy/esp/esp-idf/components/driver/i2c/include -I/home/networkjarwy/esp/esp-idf/components/driver/touch_sensor/include -I/home/networkjarwy/esp/esp-idf/components/driver/twai/include -I/home/networkjarwy/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/networkjarwy/esp/esp-idf/components/esp_pm/include -I/home/networkjarwy/esp/esp-idf/components/esp_ringbuf/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_gpio/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_pcnt/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_gptimer/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_spi/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_i2s/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/networkjarwy/esp/esp-idf/components/sdmmc/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_sdspi/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_sdio/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_dac/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_rmt/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_tsens/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_sdm/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_i2c/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_uart/include -I/home/networkjarwy/esp/esp-idf/components/vfs/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_ledc/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_parlio/include -I/home/networkjarwy/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306=. -fmacro-prefix-map=/home/networkjarwy/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/walkterm-ssd1306.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/walkterm-ssd1306.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/walkterm-ssd1306.c.obj -c /home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main/walkterm-ssd1306.c
/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main/walkterm-ssd1306.c: In function 'app_main':
/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main/walkterm-ssd1306.c:36:9: error: 'top' undeclared (first use in this function)
   36 |         top = 2;
      |         ^~~
/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main/walkterm-ssd1306.c:36:9: note: each undeclared identifier is reported only once for each function it appears in
/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main/walkterm-ssd1306.c:37:9: error: 'center' undeclared (first use in this function)
   37 |         center = 3;
      |         ^~~~~~
/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main/walkterm-ssd1306.c:38:9: error: 'bottom' undeclared (first use in this function)
   38 |         bottom = 8;
      |         ^~~~~~
In file included from /home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/main/walkterm-ssd1306.c:9:
/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/components/ssd1306/font8x8_basic.h: At top level:
/home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/components/ssd1306/font8x8_basic.h:41:16: warning: 'font8x8_basic_tr' defined but not used [-Wunused-variable]
   41 | static uint8_t font8x8_basic_tr[128][8] = {
      |                ^~~~~~~~~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/build/bootloader/esp-idf/esptool_py && /home/networkjarwy/.espressif/python_env/idf5.3_py3.13_env/bin/python /home/networkjarwy/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/networkjarwy/Desktop/projects/walkterm/walkterm-ssd1306/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
ninja: build stopped: subcommand failed.
